--- a/roles/network_plugin/calico/defaults/main.yml
+++ b/roles/network_plugin/calico/defaults/main.yml
@@ -61,7 +61,7 @@ calico_healthhost: "localhost"
 calico_iptables_lock_timeout_secs: 10
 
 # Choose Calico iptables backend: "Legacy", "Auto" or "NFT" (FELIX_IPTABLESBACKEND)
-calico_iptables_backend: "Legacy"
+calico_iptables_backend: "Auto"
 
 # If you want to use non default IP_AUTODETECTION_METHOD for calico node set this option to one of:
 # * can-reach=DESTINATION
