--- a/roles/kubespray-defaults/defaults/main.yaml
+++ b/roles/kubespray-defaults/defaults/main.yaml
@@ -314,6 +314,7 @@ dashboard_enabled: false
 
 # Addons which can be enabled
 helm_enabled: false
+k9s_enabled: true
 registry_enabled: false
 metrics_server_enabled: false
 enable_network_policy: true
