--- a/roles/download/defaults/main.yml
+++ b/roles/download/defaults/main.yml
@@ -84,6 +84,7 @@ multus_version: "v3.7"
 ovn4nfv_ovn_image_version: "v1.0.0"
 ovn4nfv_k8s_plugin_image_version: "v1.1.0"
 helm_version: "v3.5.3"
+k9s_version: "v0.24.2"
 
 # Get kubernetes major version (i.e. 1.17.4 => 1.17)
 kube_major_version: "{{ kube_version | regex_replace('^v([0-9])+\\.([0-9]+)\\.[0-9]+', 'v\\1.\\2') }}"
@@ -102,6 +103,7 @@ calicoctl_download_url: "https://github.com/projectcalico/calicoctl/releases/dow
 calico_crds_download_url: "https://github.com/projectcalico/calico/archive/{{ calico_version }}.tar.gz"
 crictl_download_url: "https://github.com/kubernetes-sigs/cri-tools/releases/download/{{ crictl_version }}/crictl-{{ crictl_version }}-{{ ansible_system | lower }}-{{ image_arch }}.tar.gz"
 helm_download_url: "https://get.helm.sh/helm-{{ helm_version }}-linux-{{ image_arch }}.tar.gz"
+k9s_download_url: "https://github.com/derailed/k9s/releases/download/{{ k9s_version }}/k9s_Linux_x86_64.tar.gz"
 
 crictl_checksums:
   arm:
@@ -458,6 +460,14 @@ helm_archive_checksums:
   arm64:
     v3.5.3: e1348d94ce4caace43689ee2dfa5f8bcd8687c12053d9c13d79875b65d6b72aa
 
+k9s_archive_checksums:
+  arm:
+    v0.24.2: 0
+  amd64:
+    v0.24.2: 238b754da8469c1e25a2699d2994a59b16308b2abee671cbf9c476a0b8d9bd67
+  arm64:
+    v0.24.2: 0
+
 etcd_binary_checksum: "{{ etcd_binary_checksums[image_arch] }}"
 cni_binary_checksum: "{{ cni_binary_checksums[image_arch] }}"
 kubelet_binary_checksum: "{{ kubelet_checksums[image_arch][kube_version] }}"
@@ -467,6 +477,7 @@ calicoctl_binary_checksum: "{{ calicoctl_binary_checksums[image_arch][calico_ctl
 calico_crds_archive_checksum: "{{ calico_crds_archive_checksums[calico_version] }}"
 crictl_binary_checksum: "{{ crictl_checksums[image_arch][crictl_version] }}"
 helm_archive_checksum: "{{ helm_archive_checksums[image_arch][helm_version] }}"
+k9s_archive_checksum: "{{ k9s_archive_checksums[image_arch][k9s_version] }}"
 
 # Containers
 # In some cases, we need a way to set --registry-mirror or --insecure-registry for docker,
@@ -963,6 +974,19 @@ downloads:
     dest: "{{ local_release_dir }}/helm-{{ helm_version }}/helm-{{ helm_version }}-linux-{{ image_arch }}.tar.gz"
     sha256: "{{ helm_archive_checksum }}"
     url: "{{ helm_download_url }}"
+    unarchive: true
+    owner: "root"
+    mode: "0755"
+    groups:
+    - kube-master
+
+  k9s:
+    enabled: "{{ k9s_enabled }}"
+    file: true
+    version: "{{ k9s_version }}"
+    dest: "{{ local_release_dir }}/k9s-{{ k9s_version }}/k9s-{{ k9s_version }}-linux-x86_64.tar.gz"
+    sha256: "{{ k9s_archive_checksum }}"
+    url: "{{ k9s_download_url }}"
     unarchive: true
     owner: "root"
     mode: "0755"
